[gd_scene load_steps=12 format=3 uid="uid://ds6nypcndw3y2"]

[ext_resource type="Script" path="res://Enemy/enemy.gd" id="1_isrjv"]
[ext_resource type="Texture2D" uid="uid://bm403vb48v26m" path="res://_asset/_texture/Enemy/kolbold_strong.png" id="2_wuvd6"]
[ext_resource type="PackedScene" uid="uid://dbum8g0mswooi" path="res://Utility/hurtbox.tscn" id="3_gbjqi"]
[ext_resource type="PackedScene" uid="uid://b8fgsq2wvh6vf" path="res://Utility/hitbox.tscn" id="4_5nu5o"]
[ext_resource type="AudioStream" uid="uid://uhlka6f2hqtb" path="res://_asset/_Audio/SoundEffect/enemy_hit.ogg" id="5_4tkjs"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yro72"]
radius = 6.0
height = 24.0

[sub_resource type="Animation" id="Animation_pbafv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_40ag5"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jgleh"]
_data = {
"RESET": SubResource("Animation_pbafv"),
"walk": SubResource("Animation_40ag5")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l557u"]
size = Vector2(25, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_38078"]
size = Vector2(20, 29)

[node name="enemy_kobold_strong" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 5
collision_mask = 5
script = ExtResource("1_isrjv")
movement_speed = 28.0
enemy_damage = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_wuvd6")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_yro72")

[node name="walkTime" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jgleh")
}

[node name="Hurtbox" parent="." instance=ExtResource("3_gbjqi")]
collision_layer = 6
collision_mask = 4
HurtBoxType = 1

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_l557u")

[node name="DisableTimer" parent="Hurtbox" index="1"]
wait_time = 0.25

[node name="Hitbox" parent="." instance=ExtResource("4_5nu5o")]
collision_layer = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(-4.76837e-07, 0.5)
shape = SubResource("RectangleShape2D_38078")

[node name="snd_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_4tkjs")
volume_db = -20.0

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
